[package]
name = "adblock-rust-compat"
version = "0.2.2"
edition = "2021"
description = "Check which filter-list rules for a set of domains are supported by adblock-rust"
license = "MPL-2.0"
readme = "README.md"

[[bin]]
name = "adblock-rust-compat"
path = "src/main.rs"

[dependencies]
adblock = { version = "^0.12", features = ["css-validation"] }
ureq = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
